syntax = "proto3";

package test;
option go_package = "github.com/libp2p/go-msgio/test";

message NinOptNative {
	optional double Field1 = 1;
	optional float Field2 = 2;
	optional int32 Field3 = 3;
	optional int64 Field4 = 4;
	optional uint32 Field5 = 5;
	optional uint64 Field6 = 6;
	optional sint32 Field7 = 7;
	optional sint64 Field8 = 8;
	optional fixed32 Field9 = 9;
	optional sfixed32 Field10 = 10;
	optional fixed64 Field11 = 11;
	optional sfixed64 Field12 = 12;
	optional bool Field13 = 13;
	optional string Field14 = 14;
	optional bytes Field15 = 15;
}
